MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Origin__mdt/Case_Config_Origin__mdt.object-meta.xml
<CustomObject>
    <label>Case Config Origin</label>
    <pluralLabel>Case Config Origins</pluralLabel>
</CustomObject>