MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Origin__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>800 Modon</fullName>
                <default>true</default>
                <label>800 Modon</label>
            </value>
            <value>
                <fullName>Broker Portal</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Direct Email</fullName>
            </value>
            <value>
                <fullName>Internal Apps</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Walk In</fullName>
            </value>
            <value>
                <fullName>Websites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>