MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Origin__mdt/fields/SourceSubCategory__c.field-meta.xml
<CustomField>
    <fullName>SourceSubCategory__c</fullName>
    <label>SourceSubCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Details</fullName>
            </value>
            <value>
                <fullName>Bounced Cheque</fullName>
            </value>
            <value>
                <fullName>Broker Inquiries</fullName>
            </value>
            <value>
                <fullName>Cancel &amp; Refund</fullName>
            </value>
            <value>
                <fullName>Cheque Replacement</fullName>
            </value>
            <value>
                <fullName>Contact Details Update</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
                <default>true</default>
                <label>Customer Care</label>
            </value>
            <value>
                <fullName>Equity Transfer</fullName>
            </value>
            <value>
                <fullName>Expired Cheque Collection</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>General Enquiry</fullName>
            </value>
            <value>
                <fullName>Golden visa</fullName>
            </value>
            <value>
                <fullName>Job Inquiry</fullName>
            </value>
            <value>
                <fullName>Milestone Collection</fullName>
            </value>
            <value>
                <fullName>Payment Extension</fullName>
            </value>
            <value>
                <fullName>Payment Receipt</fullName>
            </value>
            <value>
                <fullName>Pre Registration Certificate</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Property Handover</fullName>
            </value>
            <value>
                <fullName>Property Transfer</fullName>
            </value>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>Statement of Account</fullName>
            </value>
            <value>
                <fullName>SPA Copy</fullName>
            </value>
            <value>
                <fullName>ADM/ADGM Registration</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>ADM Fee Refund</fullName>
            </value>
            <value>
                <fullName>Showroom Villa Appointment Request</fullName>
            </value>
            <value>
                <fullName>Handover Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>