MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Origin__mdt/fields/TargetSubCategory__c.field-meta.xml
<CustomField>
    <fullName>TargetSubCategory__c</fullName>
    <label>TargetSubCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Docusign Follow Up</fullName>
                <default>true</default>
                <label>Docusign Follow Up</label>
            </value>
            <value>
                <fullName>Office Location/Working Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>