MODON MRE BPDEV/force-app/main/default/objects/Case_Config_Origin__mdt/listViews/Organized.listView-meta.xml
<ListView>
    <fullName>Organized</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Channel__c</columns>
    <columns>Source__c</columns>
    <columns>SourceSubCategory__c</columns>
    <columns>TargetCategory__c</columns>
    <columns>TargetSubCategory__c</columns>
    <filterScope>Everything</filterScope>
    <label>Organized</label>
</ListView>